<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
      <item android:id = "@+id/menu_calendar"
            android:title="@string/calendar"
            android:orderInCategory="1"
            android:showAsAction="never"/>
    <item android:id = "@+id/menu_experts"
          android:title="@string/expert"
          android:orderInCategory="2"
          android:showAsAction="never"/>
    <item android:id = "@+id/menu_video"
          android:title="@string/video"
          android:orderInCategory="3"
          android:showAsAction="never"/>
    <item android:id = "@+id/menu_horo"
          android:title="@string/horo"
          android:orderInCategory="4"
          android:showAsAction="never"/>
    <item android:id = "@+id/menu_love"
          android:title="@string/love"
          android:orderInCategory="5"
          android:showAsAction="never"/>
    <item android:id = "@+id/menu_help"
          android:title="@string/help"
          android:orderInCategory="6"
          android:showAsAction="never"/>
</menu>